aタグからpタグに変更

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,7 @@
 <div class="main top-main"> 
   <div class="top-message">
     <h2>みんなで、Poemy</h2> 
-    <a>一つくらい世界を変えようぜ</a>
+    <p>一つくらい世界を変えようぜ</p>
   </div>
 </div>
 
