--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,7 +1,7 @@
 <div class="main top-main"> 
   <div class="top-message">
     <h2>みんなで、Poemy</h2> 
-    <p>一つくらい世界を変えようぜ</p>
+    <p>一つくらい世界変えようぜ</p>
   </div>
 </div>
 
