--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -131,4 +131,16 @@ header{
 }
 
 
-
+/* フラッシュ =================================== */
+.flash {
+  padding: 10px 0;
+  color: white;
+  background:orange;
+  text-align: center;
+  position: absolute;
+  top: 64px;
+  z-index:10;
+  width: 100%;
+  border-radius:0 0 2px 2px;
+  font-size: 14px;
+}
