--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,13 +1,20 @@
 <div class="main posts-new">
 	<div class="container">
 		<h1 class="form-heading">編集する</h1>
-		<%= form_tag("/posts/#{@post.id}/update")do %>
-		  <div class="form">
-			  <div class="form-body">
-				  <textarea name="content"><%= @post.content %></textarea>
-				  <input type ="submit" value="保存">
-			  </div>
-		  </div>
+		<%= form_tag("/posts/#{@post.id}/update") do %>
+		<div class="form">
+			<div class="form-body">
+				<div class="error_message">
+
+					<% @post.errors.full_messages.each do |message| %>
+					<%= message %>
+				
+					<% end %>
+				</div>
+				<textarea name="content"><%= @post.content %></textarea>
+				<input type ="submit" value="保存">
+			</div>
+		</div>
 		<% end %>
 
 	</div>
