ログインフォーム①

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
           <%= link_to("新規登録","/users/signup") %>
         </li>
         <li>
+          <%= link_to("ログイン","/login") %>
+        <li>
           <%= link_to("Poemyとは","/about") %>
         </li>
         <li>
