--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
 		  <div class="form">
 			  <div class="form-body">
 			  <% @post.errors.full_messages.each do |message| %>
-			  <div class="form-error">
+			  <div class="form_error">
 			  <%= message %>
 			  </div>
 			  <% end %>
