ログインフォーム② ：ユーザの特定

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,6 +18,8 @@
 			  <input name ="image" type ="file">
 				<p>メールアドレス</p>
 				<input name ="email" value="<%= @user.email %>">
+				<p>パスワード</p>
+				<input name ="password" value="<%= @user.password %>">
 				<input type ="submit" value="登録">
 				<% end %>
 			</div>
