--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,15 @@
         <li>
           <%= link_to("poemer List","/users/index") %>
         </li>
+        <li>
+          <%= link_to("ログアウト","/logout",{method: :post}) %>
+        </li>
+        <li>
+         <% @user = User.find_by(id: session[:user_id]) %>
+         <% if @user %>
+         <%= @user.name %>
+         <% end %>
+        </li>
       </ul>
 
     </header>
