--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,6 +16,8 @@
 				<input name ="name" value="<%= @user.name %>">
 				<p>メールアドレス</p>
 				<input name ="email" value="<%= @user.email %>">
+				<p>パスワード</p>
+				<input name ="password"  type ="password" value="<%= @user.password %>">
 				<input type ="submit" value="登録">
 				<% end %>
 			</div>
