ログインフォーム③：ログイン時の表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,47 +4,58 @@
 <head>
 	<title>Poemy</title>
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  
+
 	<!-- /jQueryを読み込む -->
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
- 
-  </head>
 
-  
-  <body>
-    <header>
-      <div class="header-logo">
-        <%= link_to("Poemy","/") %>
-      </div>
+</head>
 
-      <ul class="header-menus">
-        <li>
-          <%= link_to("新規登録","/users/signup") %>
-        </li>
-        <li>
-          <%= link_to("ログイン","/login") %>
-        <li>
-          <%= link_to("Poemyとは","/about") %>
-        </li>
-        <li>
-          <%= link_to("投稿一覧","/posts/index") %>
-        </li>
-        <li>
-          <%= link_to("新規投稿","/posts/new") %>
-        </li>
-        <li>
-          <%= link_to("poemer List","/users/index") %>
-        </li>
-        <li>
-          <%= link_to("ログアウト","/logout",{method: :post}) %>
-        </li>
-        <li>
-         <% @user = User.find_by(id: session[:user_id]) %>
-         <% if @user %>
-         <%= @user.name %>
-         <% end %>
-        </li>
+
+<body>
+  <header>
+    <div class="header-logo">
+      <%= link_to("Poemy","/") %>
+    </div>
+
+    <ul class="header-menus">
+      <% if session[:user_id] %>
+      <li>
+       
+       <% if @current_user  %>
+       <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+       <% end %>
+     </li>
+     <li>
+      <%= link_to("投稿一覧","/posts/index") %>
+    </li>
+    <li>
+      <%= link_to("新規投稿","/posts/new") %>
+    </li>
+    <li>
+      <%= link_to("poemer List","/users/index") %>
+    </li>
+    <li>
+      <%= link_to("ログアウト","/logout",{method: :post}) %>
+    </li>
+
+    <% else %>
+    <li>
+      <%= link_to("Poemyとは","/about") %>
+    </li>
+
+    <li>
+      <%= link_to("新規登録","/users/signup") %>
+    </li>
+
+    <li>
+      <%= link_to("ログイン","/login") %>
+      <li>
+        <% end %>
+
+
+
+
       </ul>
 
     </header>
