--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
 			<h2><%= @user.name %></h2>
 			<p><%= @user.email %></p>
 			<div class ="user-edit-bottun">
+				<% if @user.id == @current_user.id %>
 				<%= link_to("編集","/users/#{@user.id}/edit") %>
+				<% end %>
 			</div>
 		</div>
 	</div>
