--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -30,9 +30,18 @@
 	overflow: hidden;
 }
 
-.post-show-item p{
+.posts-show-item p{
 	font-size:24px;
 	margin:20px 0;
+}
+
+.posts-show-item img{
+  width: 60px;
+  height: 60px;
+  border-radius: 40%;
+  box-shadow: 0 2px 6px #c1ced7;
+  vertical-align: middle;
+  object-fit: cover;
 }
 
 .post-time{
@@ -43,6 +52,16 @@
 
 .post-menus{
 	float: right;
+}
+
+.post-user-name{
+	
+}
+
+
+
+.post-user-name a{
+	 font-weight: 600;
 }
 
 /* posts/new ================================ */
