--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,11 @@
 <div class ="main posts-show">
 	<div class ="container">
 		<div class ="posts-show-item">
+			<div class ="post-user-name">
+				<img src= "<%= "/user_images/#{@user.image_name}" %>" >
+				<%= link_to(@user.name,"/users/#{@user.id}") %>
+			</div>
+ 			
 			<p>
 				<%= @post.content %>
 			</p>
@@ -11,7 +16,7 @@
 
 			
 			<div class ="post-menus">
-			
+
 				<%= link_to("編集","/posts/#{@post.id}/edit") %>
 				<%= link_to("削除","/posts/#{@post.id}/destroy",{method:"post"}) %>
 				
