--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,10 +16,10 @@
 
 			
 			<div class ="post-menus">
-
+				<% if @post.user_id == @current_user.id %>
 				<%= link_to("編集","/posts/#{@post.id}/edit") %>
 				<%= link_to("削除","/posts/#{@post.id}/destroy",{method:"post"}) %>
-				
+				<% end %>
 			</div>
 			
 
