--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,17 +4,21 @@
 	<div class ="container">
 
 		<div class ="user">
-			<img src= "<%= "/user_images/#{@user.image_name}" %>" >
-			<h2><%= @user.name %></h2>
-			<p><%= @user.email %></p>
-			<div class ="user-edit-bottun">
-				<% if @user.id == @current_user.id %>
-				<%= link_to("編集","/users/#{@user.id}/edit") %>
-				<% end %>
+			<div class = "user-icon-name">
+				<img src= "<%= "/user_images/#{@user.image_name}" %>" >
+				<h2><%= @user.name %></h2>
+				<p><%= @user.email %></p>
+				<div class ="user-edit-bottun">
+					<% if @user.id == @current_user.id %>
+					<%= link_to("編集","/users/#{@user.id}/edit") %>
+					<% end %>
+				</div>
+			</div>
+			<div class = "user-likes-count">
+				<p>get poemy!</p>
+				
 			</div>
 		</div>
-
-
 		<ul class="user-tabs">
 			<li class="active"><%= link_to("投稿", "/users/#{@user.id}") %></li>
 			<li><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
