Likesテーブルのpost_users_idのデータの型を変更

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,8 @@
 				</div>
 			</div>
 			<div class = "user-likes-count">
-				<p>get poemy!</p>
+				<h2>get poemy!</h2>
+				<h2><%= @posts.count %></h2>
 				
 			</div>
 		</div>
