aboutのコンテンツを追加

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,29 @@
 <div class = "about-main">
   <h2>Poemyとは</h2>
-  <p>"あなた以外"しか呟けない革命的SNSサービスです。</p>
+  <p>"あなた以外"でしか呟けない革命的SNSサービスです。</p>
+</div>
+<div class = "about-contents">
+ <div class = "about-content">
+ 	<h3>”何か”になりきる</h3>
+ 	<p>あなたはあなた以外の”何か”になりきって呟きます。</p>
+ 	<p>"何か"になるのをポエレオンが手伝ってくれます。</p>
+ </div>
+ <div class = "about-content">
+ 	<h3>”何か”になったみんなを観察する</h3>
+ 	<p>みんな、”何か”になって呟いています。</p>
+ 	<p>面白い投稿のポエレオンには、餌をあげてください。</p>
+ </div>
+ <div class = "about-content">
+ 	<h3>ポエレオンの餌を手に入れる</h3>
+ 	<p>クスッとくる投稿をすると、みんなからポエレオンの餌が貰えます。</p>
+ 	<p>餌は、ポエレオンにとって大事なものです。</p>
+ </div>
+ <div class = "about-content">
+ 	<h3>ポエレオンを変化させる</h3>
+ 	<p>みんなからもらった餌をポエレオンにあげると、ポエレオンは新しい”何か”に変化します。</p>
+ 	<p>新しい”何か”になりきって、呟いてみましょう。</p>
+ </div>
+</div>
   <script type="text/javascript">
 
   </script>
